hard-gists/2870240/run.log
=== Docker Run Log for 2870240 ===
Started at: Mi 29. Okt 13:18:56 CET 2025

[2025-10-29 13:18:57] START: Running container for 2870240
[2025-10-29 13:18:57] SUCCESS: Container dd88611445ee3151b82fbe3e0b53a71f91f51efa0c2f85eacf8612f39a9753a1 started for 2870240
=== Container logs for 2870240 ===
  File "/snippet.py", line 28
    print "prev"
    ^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2870240 ===
[2025-10-29 13:18:59] INFO: Container dd88611445ee3151b82fbe3e0b53a71f91f51efa0c2f85eacf8612f39a9753a1 has stopped
